# analise-agua

./: .gitignore  README.md  pyproject.toml
analise-dados/: analise-dados.ipynb
data/02-processed/: dados-agua-tratados.csv
depoly/: melhor_modelo_potabilidade.pkl
modelos/: ml-analise.ipynb
modelos/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
modelos/catboost_info/learn/: events.out.tfevents
