[project]
name = "analise-agua"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "catboost>=1.2.10",
    "imblearn>=0.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "missingno>=0.5.2",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
